# txt2epub

./: README.md  txt2epub.cabal  txt2epub.hs
src/: Main.hs  Txt2Epub.hs
test/: Test.hs
