name: Txt2Epub
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
description:  
data-dir: ""
 
executable txt2epub
    build-depends: QuickCheck -any, base -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
 
test-suite test-txt2epub
    build-depends: QuickCheck -any, base -any, HUnit -any, test-framework-quickcheck2 -any, test-framework -any, test-framework-hunit -any
    
    type: exitcode-stdio-1.0
    main-is: Test.hs
    buildable: True
    hs-source-dirs: test, src